# libslw

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  configure.h.in  install.sh  pc.in
cmake/: FindLua.cmake  slwConfig.cmake.in
include/slw/: Call.h  State.h  call.h  call.hpp  cstrings.h  exception.hpp  field.h  field.hpp  functional.hpp  functional_helpers.hpp  get_field.h  get_field.hpp  reference.hpp  slw.h  state.h  state.hpp  stdout.h  types.h  types.hpp  utility.h  utility.hpp  value.hpp  warnings.h
include/slw/range/: apply.hpp  type_range.hpp
include/slw/variant/: bool.hpp  factory.hpp  int.hpp  number.hpp  string.hpp  table.hpp  uint.hpp  variant.hpp
modules/: FindLuaJIT.cmake
source/code/: slw.cpp  slw.h
src/: Call.cpp  State.cpp  call.cpp  exception.cpp  field.cpp  functional.cpp  get_field.cpp  main.cpp  ptr.hpp  reference.cpp  slw.cpp  state.cpp  types.cpp  utility.cpp  value.cpp
src/helpers/: peek.hpp  pop.hpp  push.hpp  remove.hpp  tostring.cpp  tostring.hpp
src/state/: peek.cpp  pop.cpp  push.cpp  remove.cpp
src/variant/: bool.cpp  factory.cpp  int.cpp  number.cpp  string.cpp  table.cpp  uint.cpp  variant.cpp  variant_ctors.hpp  variant_numeric_dereference.hpp  variant_op_assign.hpp  variant_op_eq.hpp
tests/: CMakeLists.txt  main.cpp  state.load.cpp  state.pop.cpp
tests/src/: functional.cpp  reference.cpp  state.copy.cpp  state.cpp  state.peek.cpp  state.push.cpp  variant.cpp
